feat: script hash
